<resources>
    <string name="app_name">ActivityReturnEx</string>
    <string name="title">無料好圖分享，請快登入查看！</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogin">立馬登入！</string>
    <string name="tvAccount">帳號</string>
    <string name="accHint">好像是abc</string>
    <string name="tvPassword">密碼</string>
    <string name="passHint">好像是123</string>
    <string name="btnSubmit">確認</string>
    <string name="btnCancel">取消</string>
    <string name="inputError">提示這麼明顯還輸入錯誤…&#062;_&#060;</string>
</resources>
